--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -182,6 +182,8 @@
                         margin-bottom: 10px;
                         color: white;
                         font-weight: bold;
+                        display: flex;
+                        align-items: center;
                         > span {
                           margin-right: 10px;
                           display: inline-block;
