--- a/src/styles/_adapter.scss
+++ b/src/styles/_adapter.scss
@@ -15,6 +15,6 @@ html {
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: $mainColor;
+    transition: background-color 0.3s;
   }
 }
