--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -86,6 +86,9 @@
       text-overflow: ellipsis;
       overflow: hidden;
       text-align: left;
+      &::-webkit-search-cancel-button {
+        -webkit-appearance: none;
+      }
       &::-ms-clear,
       ::-ms-reveal {
         display: none;
@@ -246,6 +249,50 @@
                   }
                 }
               }
+            }
+          }
+        }
+      }
+      .search-page-suggest {
+        .search-tips {
+          color: #507daf;
+          font-size: 24px;
+          height: 90px;
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          padding-left: 30px;
+          &:active {
+            background-color: #131313;
+          }
+        }
+        .suggest-data {
+          display: flex;
+          flex-direction: column;
+          li {
+            &:active {
+              background-color: #131313;
+            }
+            height: 90px;
+            color: white;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            padding-left: 30px;
+            cursor: pointer;
+            .icon-search {
+              pointer-events: none;
+              @include sprite($sprite-cm2-list-icn-search-2x);
+              margin-right: 15px;
+              flex: 0 0 auto;
+            }
+            > span {
+              width: 100%;
+              height: 100%;
+              border-bottom: 1px solid #2c2c2c;
+              display: flex;
+              align-items: center;
+              white-space: nowrap;
             }
           }
         }
