--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,9 @@
 body {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background-color: $mainColor;
   font-family: "STHeiti", "Microsoft YaHei", "Helvetica", "Arial", sans-serif;
 }
+
 #app {
   height: 100%;
   #pages-box {
