--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -312,6 +312,19 @@
       top: 0;
       bottom: 0;
       z-index: 1;
+      .search-result-item-swiper {
+        .search-result-item-scroller {
+          padding-bottom: $footerHeight;
+          min-height: 200vh;
+          display: flex;
+          justify-content: center;
+          font-size: 50px;
+          color: white;
+        }
+        > .swiper-scrollbar {
+          height: calc(100% - #{$footerHeight} - 2%);
+        }
+      }
     }
   }
 }
