--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -319,6 +319,9 @@
           justify-content: center;
           font-size: 50px;
           color: white;
+          .no-data {
+            margin-top: 20px;
+          }
           .result1 {
             width: 100%;
             ul {
