--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -319,9 +319,10 @@
           justify-content: center;
           font-size: 50px;
           color: white;
-          .no-data {
+          .loading-component {
             margin-top: 20px;
           }
+
           .result1 {
             width: 100%;
             ul {
