--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -320,7 +320,7 @@
           font-size: 50px;
           color: white;
           .loading-component {
-            margin-top: 20px;
+            margin: 20px 0;
           }
 
           .result1 {
